# gopro_ros

./: .clang-format  CMakeLists.txt  LICENSE  README.md  gopro_to_asl.cpp  gopro_to_rosbag.cpp  package.xml
cmake_modules/: Findffmpeg.cmake
include/: GPMF_bitstream.h  GPMF_common.h  GPMF_mp4reader.h  GPMF_parser.h  GPMF_utils.h  ImuExtractor.h  Utils.h  VideoExtractor.h  color_codes.h  date.h
launch/: gopro_to_asl.launch  gopro_to_rosbag.launch
scripts/: asl_to_bag.py  bag_to_asl.py  orbtimestamp.py
src/: GPMF_mp4reader.c  GPMF_parser.c  GPMF_print.cpp  GPMF_utils.c  ImuExtractor.cpp  Utils.cpp  VideoExtractor.cpp
src/gopro_cam/: gopro.py
